// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GameFinished should match snapshot when circle wins 1`] = `
<div
  className="restartAlignment visible"
>
  <Typography
    className="winnerText"
    use="headline4"
  >
    <Icon
      className="winnerIcon"
      icon={
        Object {
          "icon": "o",
          "size": "large",
        }
      }
    />
     
    wins!
  </Typography>
  <withRipple(Button)
    dense={true}
    onClick={[Function]}
    raised={true}
  >
    Play Again
  </withRipple(Button)>
</div>
`;

exports[`GameFinished should match snapshot when cross wins 1`] = `
<div
  className="restartAlignment visible"
>
  <Typography
    className="winnerText"
    use="headline4"
  >
    <Icon
      className="winnerIcon"
      icon={
        Object {
          "icon": "x",
          "size": "large",
        }
      }
    />
     
    wins!
  </Typography>
  <withRipple(Button)
    dense={true}
    onClick={[Function]}
    raised={true}
  >
    Play Again
  </withRipple(Button)>
</div>
`;

exports[`GameFinished should match snapshot when draw 1`] = `
<div
  className="restartAlignment visible"
>
  <Typography
    className="winnerText"
    use="headline4"
  >
    It's a draw!
  </Typography>
  <withRipple(Button)
    dense={true}
    onClick={[Function]}
    raised={true}
  >
    Play Again
  </withRipple(Button)>
</div>
`;

exports[`GameFinished should match snapshot when no one wins 1`] = `
<div
  className="restartAlignment hidden"
>
  <Typography
    className="winnerText"
    use="headline4"
  >
    <Icon
      className="winnerIcon"
      icon={
        Object {
          "icon": "x",
          "size": "large",
        }
      }
    />
    resrv
  </Typography>
  <withRipple(Button)
    dense={true}
    onClick={[Function]}
    raised={true}
  >
    Play Again
  </withRipple(Button)>
</div>
`;
